--- a/index.qmd
+++ b/index.qmd
@@ -7,4 +7,4 @@ This ia trial website to check out whats possible with Quarto
 
 ### You can edit this file with Quarto Markdown
 
-
+See [Notes](notes.qmd)
